force-app/main/default/objects/Activity_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Activity logs associated with an account</description>
    <inlineHelpText>Activity logs associated with an account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activity Logs</relationshipLabel>
    <relationshipName>Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>