force-app/main/default/objects/Activity_Log__c/fields/Action_Data__c.field-meta.xml
<CustomField>
    <fullName>Action_Data__c</fullName>
    <description>Activity Log action data which has details about the activity</description>
    <inlineHelpText>Activity Log action data which has details about the activity</inlineHelpText>
    <label>Action Data</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>