force-app/main/default/objects/Activity_Log__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Activity Log Action Type</description>
    <inlineHelpText>Activity Log Action Type</inlineHelpText>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>