force-app/main/default/objects/Activity_Log__c/fields/Action_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Action_Type_Id__c</fullName>
    <description>Id associated with the action type</description>
    <inlineHelpText>Id associated with the action type</inlineHelpText>
    <label>Action Type Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>