force-app/main/default/objects/Activity_Log__c/fields/Activity_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Activity_Log_Id__c</fullName>
    <description>Unique Identifier for the activity log</description>
    <inlineHelpText>Unique Identifier for the activity log</inlineHelpText>
    <label>Activity Log Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>