force-app/main/default/objects/Activity_Log__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Name of the actor - like teammate user id or customer email and so on</description>
    <inlineHelpText>Name of the actor - like teammate user id or customer email and so on</inlineHelpText>
    <label>Actor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>