force-app/main/default/objects/Activity_Log__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IP Address associated with the activity</description>
    <inlineHelpText>IP Address associated with the activity</inlineHelpText>
    <label>IP Address</label>
    <length>128</length>
    <type>Text</type>
</CustomField>