force-app/main/default/objects/Activity_Log__c/fields/Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Created__c</fullName>
    <description>Activity Log Created Time</description>
    <inlineHelpText>Activity Log Created Time</inlineHelpText>
    <label>Time Created</label>
    <type>DateTime</type>
</CustomField>