force-app/main/default/objects/Activity_Log__c/fields/Visitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Id__c</fullName>
    <description>Visitor Id associated with the activity</description>
    <inlineHelpText>Visitor Id associated with the activity</inlineHelpText>
    <label>Visitor Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>